--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,9 +1,7 @@
-key.pem
-cert.pem
 .DS_Store
 node_modules
 /dist
-auth_config.json
+
 
 # local env files
 .env.local
@@ -13,6 +11,7 @@ auth_config.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # Editor directories and files
 .idea
@@ -22,4 +21,3 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
-.env
